@@ -1,3 +1,11 @@
+Mon Mar 10 02:05:56 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/m_cpuctrl.c (m_branch): Simplify test for calling Reloc_CreateELF.
+	(m_cbnz_cbz): Likewise.
+	(m_blx): Likewise.
+	(m_bx): Likewise.
+	(m_adr): Likewise.
+
 Sun Mar  9 19:18:48 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* src/reloc.c (Reloc_SplitRelocAndAddend): Fail during pass one when
